--- a/module5/casestudy5-angular/src/app/contract/contract-list/contract-list.component.html
+++ b/module5/casestudy5-angular/src/app/contract/contract-list/contract-list.component.html
@@ -1,5 +1,6 @@
 <section class="facility-container hero-animated d-flex align-items-center">
-  <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
+  <div class="container d-flex flex-column">
+    <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
     <h3>Contract List</h3>
     <div class="d-inline-flex">
       <a href="">
@@ -25,9 +26,10 @@
       <thead>
       <tr>
         <th>No.</th>
-        <th>Facility</th>
-        <th>Customer</th>
-        <th>Employee</th>
+        <th>Contract No.</th>
+<!--        <th>Facility</th>-->
+<!--        <th>Customer</th>-->
+<!--        <th>Employee</th>-->
         <th>Start Date</th>
         <th>End Date</th>
         <th>Deposit</th>
@@ -36,15 +38,16 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
-        <td>Total</td>
+      <tr *ngFor="let contract of contracts; index as i">
+        <td>{{i+1}}</td>
+        <td>{{contract.contractId}}</td>
+<!--        <td></td>-->
+<!--        <td></td>-->
+<!--        <td></td>-->
+        <td>{{contract.startDate}}</td>
+        <td>{{contract.endDate}}</td>
+        <td>{{contract.deposit}}</td>
+        <td>{{contract.totalPayment}}</td>
         <td>
           <button class="btn btn-free-facility" data-bs-toggle="modal"
                   data-bs-target="#modalAddContractDetail">
@@ -61,7 +64,7 @@
       </tbody>
 
     </table>
-
+</div>
 
 
 
@@ -143,21 +146,27 @@
     </div>
 
 
-    <!--        <div class="row align-self-xl-end small">-->
-    <!--            <div class="col-12">-->
-    <!--                <a th:if="${contractList.hasPrevious()}"-->
-    <!--                   th:href="@{contract(page=${contractList.number - 1})}">-->
-    <!--                    <i class="bi bi-caret-left-fill"></i>-->
-    <!--                </a>-->
-    <!--                <span th:text="${contractList.number + 1}"></span>-->
-    <!--                /-->
-    <!--                <span th:text="${contractList.totalPages}"></span>-->
-    <!--                <a th:if="${contractList.hasNext()}"-->
-    <!--                   th:href="@{contract(page=${contractList.number + 1})}">-->
-    <!--                    <i class="bi bi-caret-right-fill"></i>-->
-    <!--                </a>-->
-    <!--            </div>-->
-    <!--        </div>-->
+    <!--Pagination-->
+    <div class="d-flex justify-content-end">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item ">
+            <a class="page-link " href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item ">
+            <a class="page-link " href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
 
   </div>
 </section>
