--- a/module5/casestudy5-angular/src/app/app.component.html
+++ b/module5/casestudy5-angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<app-facility-list></app-facility-list>
+<!--<app-facility-list></app-facility-list>-->
 <!--<app-facility-create></app-facility-create>-->
 <!--<app-facility-edit></app-facility-edit>-->
 
@@ -8,7 +8,7 @@
 <!--<app-customer-create></app-customer-create>-->
 <!--<app-customer-edit></app-customer-edit>-->
 
-<!--<app-contract-list></app-contract-list>-->
+<app-contract-list></app-contract-list>
 <!--<app-contract-create></app-contract-create>-->
 
 
