--- a/module5/ss7-service-and-router/src/app/product-management/product/product-delete/product-delete.component.html
+++ b/module5/ss7-service-and-router/src/app/product-management/product/product-delete/product-delete.component.html
@@ -1,1 +1,25 @@
-<p>product-delete works!</p>
+<h2>Delete Product?</h2>
+<form [formGroup]="productFormDelete" (ngSubmit)="deleteProductById($event.target.id)">
+  <table>
+    <tr>
+      <td>ID:</td>
+      <td><input type="number" formControlName="id" name="id"readonly></td>
+    </tr>
+    <tr>
+      <td>Name:</td>
+      <td><input type="text" formControlName="name" name="name" readonly></td>
+    </tr>
+    <tr>
+      <td>Price:</td>
+      <td><input type="number" formControlName="price" name="price" readonly></td>
+    </tr>
+    <tr>
+      <td>Description:</td>
+      <td><input type="text" formControlName="description" name="description" readonly></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><button>Submit</button></td>
+    </tr>
+  </table>
+</form>
