--- a/module5/ss7-service-and-router/src/app/product-management/product/product-delete/product-delete.component.html
+++ b/module5/ss7-service-and-router/src/app/product-management/product/product-delete/product-delete.component.html
@@ -1,5 +1,5 @@
 <h2>Delete Product?</h2>
-<form [formGroup]="productFormDelete" (ngSubmit)="deleteProductById($event.target.id)">
+<form [formGroup]="productFormDelete" (ngSubmit)="deleteProductById()">
   <table>
     <tr>
       <td>ID:</td>
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <td></td>
-      <td><button>Submit</button></td>
+      <td><button>Delete</button></td>
     </tr>
   </table>
 </form>
