--- a/module5/ss7-service-and-router/src/app/product-management/product/product-edit/product-edit.component.html
+++ b/module5/ss7-service-and-router/src/app/product-management/product/product-edit/product-edit.component.html
@@ -1,21 +1,21 @@
 <h1>Update Product</h1>
-<form [formGroup]="productFormEdit" (ngSubmit)="submitEdit($event.target.id)">
+<form [formGroup]="productFormEdit" (ngSubmit)="submitEdit()" *ngIf="productFormEdit">
   <table>
     <tr>
       <td>ID:</td>
-      <td><input type="number" formControlName="id" readonly></td>
+      <td><input type="number" formControlName="id" name="id" readonly></td>
     </tr>
     <tr>
       <td>Name:</td>
-      <td><input type="text" formControlName="name"></td>
+      <td><input type="text" formControlName="name" name="=name"></td>
     </tr>
     <tr>
       <td>Price:</td>
-      <td><input type="number" formControlName="price"></td>
+      <td><input type="number" formControlName="price" name="price"></td>
     </tr>
     <tr>
       <td>Description:</td>
-      <td><input type="text" formControlName="description"></td>
+      <td><input type="text" formControlName="description" name="description"></td>
     </tr>
     <tr>
       <td></td>
