--- a/module5/casestudy5-angular/src/app/facility/facility-edit/facility-edit.component.html
+++ b/module5/casestudy5-angular/src/app/facility/facility-edit/facility-edit.component.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="col mt-lg-4">
-          <a class=" btn btn-secondary" href="">Cancel</a>
+          <a routerLink="/facility/list" class=" btn btn-secondary" >Cancel</a>
           <button class=" btn btn-success ms-5" type="submit">Submit</button>
         </div>
 
