--- a/module5/ss7-service-and-router/src/app/app.component.html
+++ b/module5/ss7-service-and-router/src/app/app.component.html
@@ -17,3 +17,7 @@
 <!--bai tap 2 - product management-->
 <a routerLink="/product/list">Product List</a> | <a routerLink="/product/create">Add New Product</a>
 <router-outlet></router-outlet>
+
+<!--thuc hanh - product management (ss8 Injection)-->
+<!--<a routerLink="/category/list">Category List</a> | <a routerLink="/category/create">Add New Category</a>-->
+<!--<router-outlet></router-outlet>-->
