--- a/module5/ss7-service-and-router/src/app/product-management/product/product-delete/product-delete.component.html
+++ b/module5/ss7-service-and-router/src/app/product-management/product/product-delete/product-delete.component.html
@@ -1,5 +1,5 @@
 <h2>Delete Product?</h2>
-<form [formGroup]="productFormDelete" (ngSubmit)="deleteProductById()">
+<form [formGroup]="productFormDelete" (ngSubmit)="deleteProductById(id)">
   <table>
     <tr>
       <td>ID:</td>
