--- a/module5/casestudy5-angular/src/app/contract/contract-create/contract-create.component.html
+++ b/module5/casestudy5-angular/src/app/contract/contract-create/contract-create.component.html
@@ -77,7 +77,7 @@
           <input type="hidden" id="quantity" name="quantity">
 
           <div class="col">
-            <a class="btn btn-secondary" href="">Back</a>
+            <a routerLink="/contract/list" class="btn btn-secondary" >Back</a>
           </div>
           <div class="col">
             <button type="submit" class="btn btn-modal-delete">Submit</button>
