--- a/module5/casestudy5-angular/src/app/customer/customer-create/customer-create.component.html
+++ b/module5/casestudy5-angular/src/app/customer/customer-create/customer-create.component.html
@@ -2,70 +2,123 @@
   <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
     <div class="card w-100">
       <h2>New Customer</h2>
-      <form action="" method="post">
+      <form [formGroup]="customerForm" (ngSubmit)="submit()">
         <div class="row m-auto">
           <div class="col">
             <div class="form-group">
               <label>Customer Name</label>
-              <input type="text">
+              <input type="text" formControlName="name" name="name">
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.name.hasError('required')
+             && customerForm.controls.name.touched">This field should not be empty!</small>
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.name.hasError('pattern')
+             && customerForm.controls.name.touched">Each word should start with a capital letter & contain no number or
+                special character! </small>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Customer Type</label>
-              <select>
-                <option selected hidden>--Select Customer Type--</option>
-                <option>Diamond</option>
-                <option>Platinum</option>
-                <option>Gold</option>
-                <option>Silver</option>
-                <option>Member</option>
+              <select formControlName="customerType" name="customerType">
+                <option selected value="" disabled>--Select Customer Type--</option>
+                <option *ngFor="let type of customerTypes" [ngValue]=type>{{type.customerType}}</option>
               </select>
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.customerType.hasError('required')
+             && customerForm.controls.customerType.touched">Select customer type!</small>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>ID Card</label>
-              <input type="text">
+              <input type="text" formControlName="idCard" name="idCard">
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.idCard.hasError('required')
+             && customerForm.controls.idCard.touched">This field should not be empty!</small>
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.idCard.hasError('pattern')
+             && customerForm.controls.idCard.touched">ID Card should contain 9 or 12 digits!</small>
             </div>
           </div>
+
           <div class="col">
             <div class="form-group">
               <label>Gender</label>
-              <select>
-                <option selected hidden>--Select Gender--</option>
-                <option value="0">Female</option>
-                <option value="1">Male</option>
-                <option value="2">Other</option>
+              <select formControlName="gender" name="gender">
+                <option selected value="" disabled>--Select Gender--</option>
+                <option value=0>Female</option>
+                <option value=1>Male</option>
+                <option value=2>Other</option>
               </select>
             </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.gender.hasError('required')
+             && customerForm.controls.gender.touched">Select gender!</small>
+              </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Phone Number</label>
-              <input type="text">
+              <input type="text" formControlName="phone" name="phone">
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.phone.hasError('required')
+             && customerForm.controls.phone.touched">This field should not be empty!</small>
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.phone.hasError('pattern')
+             && customerForm.controls.phone.touched">Phone number should start with 090/091 or (84)+90/(84)+91 then 7 other digits following!</small>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Date Of Birth</label>
-              <input type="date">
+              <input type="date" formControlName="dob" name="dob">
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 12px"
+                     *ngIf="customerForm.controls.dob.hasError('required')
+             && customerForm.controls.dob.touched">This field should not be empty!</small>
+              <small class="fst-italic" style="color: red; font-size: 12px"
+                     *ngIf="customerForm.controls.dob.hasError('ageError')
+             && customerForm.controls.dob.touched">Customer should be from 18 years old!</small>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Email</label>
-              <input type="email">
+              <input type="email" formControlName="email" name="email">
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.email.hasError('required')
+             && customerForm.controls.email.touched">This field should not be empty!</small>
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.email.hasError('email')
+             && customerForm.controls.email.touched">Email should be in correct format!</small>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Address</label>
-              <input type="text">
+              <input type="text" formControlName="address" name="address">
+            </div>
+            <div class="position-absolute ms-2 mt-4 pt-3">
+              <small class="fst-italic" style="color: red; font-size: 11px"
+                     *ngIf="customerForm.controls.address.hasError('required')
+             && customerForm.controls.address.touched">This field should not be empty!</small>
             </div>
           </div>
           <div class="col">
-            <a class="btn btn-secondary" href="">Cancel</a>
+            <a class="btn btn-secondary" routerLink="/customer/list">Cancel</a>
           </div>
           <div class="col">
             <button class="btn btn-modal-delete" type="submit">Submit</button>
