--- a/module5/casestudy5-angular/src/app/customer/customer-edit/customer-edit.component.html
+++ b/module5/casestudy5-angular/src/app/customer/customer-edit/customer-edit.component.html
@@ -2,71 +2,67 @@
   <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
     <div class="card w-100">
       <h2>Update Customer</h2>
-      <form action="" method="post">
+      <form [formGroup]="customerForm" (ngSubmit)="submit()">
         <div class="row m-auto">
           <!--                    id-->
-          <input type="text" hidden>
+          <input type="text" hidden formControlName="id" name="id">
           <div class="col">
             <div class="form-group">
               <label>Customer Name</label>
-              <input type="text">
+              <input type="text" formControlName="name" name="name">
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Customer Type</label>
-              <select>
-                <option selected>value</option>
-                <option>Diamond</option>
-                <option>Platinum</option>
-                <option>Gold</option>
-                <option>Silver</option>
-                <option>Member</option>
+              <select formControlName="customerType" name="customerType"
+              [compareWith]="compareCustomerType">
+                <option *ngFor="let type of customerTypes" [ngValue]="type" >{{type.customerType}}</option>
               </select>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>ID Card</label>
-              <input type="text">
+              <input type="text" formControlName="idCard">
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Gender</label>
-              <select>
-                <option selected>Male</option>
-                <option>Female</option>
-                <option>Other</option>
+              <select formControlName="gender">
+                <option value=0>Male</option>
+                <option value=1>Female</option>
+                <option value=2>Other</option>
               </select>
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Phone Number</label>
-              <input type="text">
+              <input type="text" formControlName="phone">
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Date Of Birth</label>
-              <input type="date">
+              <input type="date" formControlName="dob">
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Email</label>
-              <input type="email">
+              <input type="email" formControlName="email">
             </div>
           </div>
           <div class="col">
             <div class="form-group">
               <label>Address</label>
-              <input type="text">
+              <input type="text" formControlName="address">
             </div>
           </div>
           <div class="col">
-            <a class="btn btn-secondary" href="">Cancel</a>
+            <a class="btn btn-secondary" routerLink="/customer/list">Cancel</a>
           </div>
           <div class="col">
             <button class="btn btn-modal-delete" type="submit">Submit</button>
