--- a/module5/casestudy5-angular/src/app/footer/footer.component.html
+++ b/module5/casestudy5-angular/src/app/footer/footer.component.html
@@ -15,9 +15,9 @@
         <div class="col-lg-6 col-md-6 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Contact or Comment</p>
-          <form action="" method="post">
+<!--          <form action="" method="post">-->
             <input type="email" name="email"><input type="submit" value="Subscribe">
-          </form>
+<!--          </form>-->
         </div>
       </div>
     </div>
