--- a/module5/casestudy5-angular/src/app/header/header.component.html
+++ b/module5/casestudy5-angular/src/app/header/header.component.html
@@ -1,17 +1,17 @@
 <div class="header container-fluid d-flex align-items-center justify-content-between">
-  <a href="" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+  <a routerLink="home" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
     <!-- Uncomment the line below if you also wish to use an image logo -->
-    <img src="../../assets/img/flogo.png" alt="furama-logo">
+    <img src="/assets/img/flogo.png" alt="furama-logo">
     <h1>Furama</h1>
   </a>
   <nav id="navbar" class="navbar">
     <ul>
-      <li class="dropdown"><a href=""><span>Home</span></a></li>
-      <li><a class="nav-link scrollto" href="">Employee</a></li>
-      <li><a class="nav-link scrollto" href="">Customer</a></li>
-      <li><a class="nav-link scrollto" href="">Facility</a></li>
-      <li><a class="nav-link scrollto" href="">Contract</a></li>
-      <li><a class="btn-login" href="">Login</a></li>
+      <li><a class="nav-link scrollto" routerLink="home">Home</a></li>
+<!--      <li><a class="nav-link scrollto" routerLink="">Employee</a></li>-->
+      <li><a class="nav-link scrollto" routerLink="/customer/list">Customer</a></li>
+      <li><a class="nav-link scrollto" routerLink="/facility/list">Facility</a></li>
+      <li><a class="nav-link scrollto" routerLink="/contract/list">Contract</a></li>
+      <li><a class="btn-login">Login</a></li>
     </ul>
     <i class="bi bi-list mobile-nav-toggle d-none"></i>
   </nav><!-- .navbar -->
