--- a/module5/casestudy5-angular/src/assets/css/custom.css
+++ b/module5/casestudy5-angular/src/assets/css/custom.css
@@ -1,5 +1,10 @@
 * {
   font-family: 'Poppins', sans-serif;
+
+}
+
+a{
+  text-decoration: none !important;
 }
 
 table {
@@ -158,6 +163,7 @@ button.btn.btn-modal-delete {
 button.btn.btn-modal-delete:hover {
   color: white;
 }
+
 /*---------Modal Create---------*/
 
 .modal-create .modal-dialog {
@@ -486,3 +492,8 @@ table tr .text-right {
   transform: scale3d(1, 1, 1);
 }
 
+nav .pagination .page-item .page-link[aria-label="Previous"],
+nav .pagination .page-item .page-link[aria-label="Next"]{
+  background-color: #0ea2bd;
+  color: white;
+}
