--- a/module5/ss7-service-and-router/src/app/product-management/product/product-create/product-create.component.html
+++ b/module5/ss7-service-and-router/src/app/product-management/product/product-create/product-create.component.html
@@ -1,10 +1,10 @@
 <h1>New Product</h1>
 <form [formGroup]="productForm" (ngSubmit)="submit()">
   <table>
-    <tr>
-      <td>ID:</td>
-      <td><input type="number" formControlName="id"></td>
-    </tr>
+<!--    <tr>-->
+<!--      <td>ID:</td>-->
+<!--      <td><input type="number" formControlName="id"></td>-->
+<!--    </tr>-->
     <tr>
       <td>Name:</td>
       <td><input type="text" formControlName="name"></td>
