--- a/module5/ss7-service-and-router/src/app/product-management/product/product-edit/product-edit.component.html
+++ b/module5/ss7-service-and-router/src/app/product-management/product/product-edit/product-edit.component.html
@@ -1,10 +1,10 @@
 <h1>Update Product</h1>
 <form [formGroup]="productFormEdit" (ngSubmit)="submitEdit()" *ngIf="productFormEdit">
   <table>
-    <tr>
-      <td>ID:</td>
-      <td><input type="number" formControlName="id" name="id" readonly></td>
-    </tr>
+<!--    <tr>-->
+<!--      <td>ID:</td>-->
+<!--      <td><input type="number" formControlName="id" name="id" readonly></td>-->
+<!--    </tr>-->
     <tr>
       <td>Name:</td>
       <td><input type="text" formControlName="name" name="=name"></td>
