--- a/module5/exam/src/assets/css/custom.css
+++ b/module5/exam/src/assets/css/custom.css
@@ -78,15 +78,17 @@ th last {
 .btn-edit {
   border-radius: 20px;
   border: #dec252 1px solid;
+  background-color: #f1e9b6;
 }
 
 .btn-edit:hover {
-  background-color: #f6e3a2;
+  background-color: #efcd57;
 }
 
 .btn-delete {
   border-radius: 20px;
   border: red 1px solid;
+  background-color: #f6c3bc;
 }
 
 .btn-delete:hover {
