--- a/module6_sprint2/shop-online/src/app/header/header.component.html
+++ b/module6_sprint2/shop-online/src/app/header/header.component.html
@@ -20,8 +20,9 @@
       <!--      </form>-->
     </div>
     <div class="col-lg-3 col-6 text-right">
-      <a routerLink="/login" class="btn bg-primary text-white m-1">Đăng nhập</a>
-      <a routerLink="" class="btn bg-primary text-white m-1">Đăng ký</a>
+      <a  routerLink="/login" class="btn bg-primary text-white m-1">Đăng nhập</a>
+      <a  routerLink="/logout" class="btn bg-primary text-white m-1">Đăng xuất</a>
+<!--      <a routerLink="" class="btn bg-primary text-white m-1">Đăng ký</a>-->
     </div>
   </div>
 </div>
@@ -54,7 +55,7 @@
               </div>
             </div>
             <a routerLink="/cart" class="nav-item nav-link">Giỏ hàng</a>
-            <a routerLink="" class="nav-item nav-link">Liên hệ</a>
+            <a  routerLink="" class="nav-item nav-link">Quản lý sản phẩm</a>
           </div>
           <div class="col-lg-3 col-6 text-right">
             <!--            <a routerLink="" class="btn border">-->
