--- a/module6_sprint2/shop-online/src/app/cart/cart.component.html
+++ b/module6_sprint2/shop-online/src/app/cart/cart.component.html
@@ -67,14 +67,14 @@
       </table>
     </div>
     <div class="col-lg-4">
-      <form class="mb-5" >
+      <div class="mb-5" >
         <div class="input-group">
           <input type="text" class="form-control p-4 border-primary" placeholder="Nhập mã khuyến mãi">
           <div class="input-group-append">
             <button class="btn btn-primary">Mã khuyến mãi</button>
           </div>
         </div>
-      </form>
+      </div>
       <div class="card border-primary mb-5">
         <div class="card-header bg-secondary border-0">
           <h4 class="font-weight-semi-bold m-0">Tổng tiền</h4>
