--- a/module6_sprint2/shop-online/src/app/header/header.component.html
+++ b/module6_sprint2/shop-online/src/app/header/header.component.html
@@ -20,9 +20,10 @@
       <!--      </form>-->
     </div>
     <div class="col-lg-3 col-6 text-right">
-      <a  routerLink="/login" class="btn bg-primary text-white m-1">Đăng nhập</a>
-      <a  routerLink="/logout" class="btn bg-primary text-white m-1">Đăng xuất</a>
-<!--      <a routerLink="" class="btn bg-primary text-white m-1">Đăng ký</a>-->
+      <a routerLink="/login" class="btn bg-primary text-white m-1" *ngIf="token == ''">Đăng nhập</a>
+      <a routerLink="" class="btn bg-primary text-white m-1" *ngIf="token != ''">Hello {{username}}</a>
+      <a routerLink="" (click)="onLogout()" class="btn bg-primary text-white m-1" *ngIf="token != ''">Đăng xuất</a>
+      <!--      <a routerLink="" class="btn bg-primary text-white m-1">Đăng ký</a>-->
     </div>
   </div>
 </div>
@@ -48,20 +49,18 @@
             <a routerLink="" class="nav-item nav-link">IPhone</a>
             <a routerLink="" class="nav-item nav-link">Mac</a>
             <div class="nav-item dropdown">
-              <a routerLink="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Phụ kiện</a>
-              <div class="dropdown-menu rounded-0 m-0">
-                <a routerLink="" class="dropdown-item">Đồng hồ</a>
-                <a routerLink="" class="dropdown-item">Tai nghe</a>
-              </div>
+              <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                Phụ kiện
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Đồng hồ</a></li>
+                <li><a class="dropdown-item" href="#">Tai nghe</a></li>
+              </ul>
             </div>
-            <a routerLink="/cart" class="nav-item nav-link">Giỏ hàng</a>
-            <a  routerLink="" class="nav-item nav-link">Quản lý sản phẩm</a>
+            <a [routerLink]="['/cart']" class="nav-item nav-link">Giỏ hàng</a>
+            <a routerLink="" class="nav-item nav-link" *ngIf="role == 'ROLE_ADMIN'">Quản lý sản phẩm</a>
           </div>
           <div class="col-lg-3 col-6 text-right">
-            <!--            <a routerLink="" class="btn border">-->
-            <!--              <i class="fas fa-heart text-primary"></i>-->
-            <!--              <span class="badge">0</span>-->
-            <!--            </a>-->
             <a routerLink="/cart" class="btn border">
               <i class="fas fa-shopping-cart text-primary"></i>
               <span class="badge">0</span>
